fixed search icon alignment

--- a/style.css
+++ b/style.css
@@ -23,17 +23,10 @@
 
  .wrapper {
     display: grid;
+    grid-template-columns: 2px 1000px;
     width: 40vw;
     min-width: 100px;
     padding-left: 20px;
-  }
-
-
-  .search-icon {
-    top: 6px;
-    left: 8px;
-    width: 14px;
-    padding-top: 5px;
   }
 
 
@@ -45,8 +38,26 @@
     padding: 2px 23px 2px 30px;
     outline: 0;
     background-color: #f5f5f5;
+    margin-left: 50px;
   }
 
+  .search-bar {
+    max-width: 750px;
+    margin-top: 10px;
+  }
+  
+  .search-icon {
+    max-width: 20px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-left: 40px;
+  }
+
+  label::before {
+    background: url(<svg style="width:24px;height:24px" viewBox="0 0 24 24">
+    <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+</svg>);
+  }
 
   .user-settings {
     display: grid;
